--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/TableViewMenuPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/TableViewMenuPage.xaml
@@ -5,17 +5,17 @@
              NavigationPage.HasNavigationBar="False">
     <StackLayout VerticalOptions="FillAndExpand">
         <Image VerticalOptions="Center" HorizontalOptions="StartAndExpand" Source="appDetailLogo.png" Margin="7"></Image>
-        <Grid RowSpacing="0" Margin="13,5,13,5">
+        <Grid RowSpacing="0" Margin="0,5,0,5">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
             <!--  row background colors  -->
-            <BoxView Grid.Row="0" Color="#cbc4c2" />
+            <BoxView Grid.Row="0" Color="#F1F2F2" />
 
             <!--  inner grid for button layouts  -->
-            <Grid Grid.Row="0" ColumnSpacing="2" HorizontalOptions="FillAndExpand"
-              RowSpacing="2" VerticalOptions="FillAndExpand">
+            <Grid Grid.Row="0" ColumnSpacing="3" HorizontalOptions="FillAndExpand" Padding="8,3,8,3"
+              RowSpacing="3" VerticalOptions="FillAndExpand">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
@@ -25,12 +25,24 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <ImageButton Grid.Row="0" Grid.Column="0" Margin="3,3,1,1" Padding="15" BackgroundColor="White" Source="fire.png" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Command="{Binding NewNotificationClicked}" CommandParameter="2" ></ImageButton>
-                <ImageButton Grid.Row="0" Grid.Column="1" Margin="1,3,3,1" Padding="15" BackgroundColor="White" Source="water.png" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Command="{Binding NewNotificationClicked}" CommandParameter="1" ></ImageButton>
-                <ImageButton Grid.Row="1" Grid.Column="0" Margin="3,1,1,1" Padding="15" BackgroundColor="White" Source="earthquake.png" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Command="{Binding NewNotificationClicked}" CommandParameter="3" ></ImageButton>
-                <ImageButton Grid.Row="1" Grid.Column="1" Margin="1,1,3,1" Padding="15" BackgroundColor="White" Source="businesscontinuity.png" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Command="{Binding NewNotificationClicked}" CommandParameter="17" ></ImageButton>
-                <ImageButton Grid.Row="2" Grid.Column="0" Margin="3,1,1,3" Padding="15" BackgroundColor="White" Source="pandemic.png" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Command="{Binding NewNotificationClicked}" CommandParameter="5" ></ImageButton>
-                <ImageButton Grid.Row="2" Grid.Column="1" Margin="1,1,3,3" Padding="15" BackgroundColor="White" Source="others.png" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Command="{Binding NewNotificationClicked}" CommandParameter="6" ></ImageButton>
+                <Frame Grid.Row="0" Grid.Column="0" HasShadow="True" OutlineColor="#dcdcdc" CornerRadius="10">
+                    <ImageButton Grid.Row="0" Grid.Column="0" BackgroundColor="White" Source="fire.png" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Command="{Binding NewNotificationClicked}" CommandParameter="2" ></ImageButton>
+                </Frame>
+                <Frame Grid.Row="0" Grid.Column="1" HasShadow="True" OutlineColor="#dcdcdc" CornerRadius="10">
+                    <ImageButton Grid.Row="0" Grid.Column="1" BackgroundColor="White" Source="water.png" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Command="{Binding NewNotificationClicked}" CommandParameter="1" ></ImageButton>
+                </Frame>
+                <Frame Grid.Row="1" Grid.Column="0" HasShadow="True" OutlineColor="#dcdcdc" CornerRadius="10">
+                    <ImageButton Grid.Row="1" Grid.Column="0" BackgroundColor="White" Source="earthquake.png" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Command="{Binding NewNotificationClicked}" CommandParameter="3" ></ImageButton>
+                </Frame>
+                <Frame Grid.Row="1" Grid.Column="1" HasShadow="True" OutlineColor="#dcdcdc" CornerRadius="10">
+                    <ImageButton Grid.Row="1" Grid.Column="1" BackgroundColor="White" Source="businesscontinuity.png" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Command="{Binding NewNotificationClicked}" CommandParameter="17" ></ImageButton>
+                </Frame>
+                <Frame Grid.Row="2" Grid.Column="0" HasShadow="True" OutlineColor="#dcdcdc" CornerRadius="10">
+                    <ImageButton Grid.Row="2" Grid.Column="0" BackgroundColor="White" Source="pandemic.png" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Command="{Binding NewNotificationClicked}" CommandParameter="5" ></ImageButton>
+                </Frame>
+                <Frame Grid.Row="2" Grid.Column="1" HasShadow="True" OutlineColor="#dcdcdc" CornerRadius="10">
+                    <ImageButton Grid.Row="2" Grid.Column="1" BackgroundColor="White" Source="others.png" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Command="{Binding NewNotificationClicked}" CommandParameter="6" ></ImageButton>
+                </Frame>
             </Grid>
         </Grid>
     </StackLayout>
