Telefon giriş ekranına maskeleme yapildi. Baştan 0 eklenmesi zorunlu tutuldu.

--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/UpdateUserInfoPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/UpdateUserInfoPage.xaml
@@ -88,6 +88,9 @@
                     <Frame Style="{StaticResource FrameStyle}" Grid.Row="2" Grid.Column="1">
                         <controls:CustomEntry Text="{Binding UserInfoMobilePhone}" Placeholder="Telefon Numaranız" PlaceholderColor="LightGray" Keyboard="Telephone"
                                               Style="{StaticResource EntryStyle}">
+                            <Entry.Behaviors>
+                                <controls:MaskedBehavior Mask="0 (XXX) XXX-XXXX" />
+                            </Entry.Behaviors>
                         </controls:CustomEntry>
                     </Frame>
 
