Pandemi ve iş sürekliliği seçimleri nde konu sabitlendi.

--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/NewScenarioPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/NewScenarioPage.xaml
@@ -77,7 +77,7 @@
                                                AutomationProperties.HelpText="Seçiniz"
                                                SelectedItem="{Binding SelectedEvent,Mode=TwoWay}"
                                                HorizontalOptions="FillAndExpand"
-                                               IsEnabled="{Binding IsEnabledEvent}"
+                                               IsEnabled="{Binding IsEventEnabledEvent}"
                                                VerticalOptions="Fill">
                     </controls:BorderlessPicker>
 
