--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/NewScenarioPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/NewScenarioPage.xaml
@@ -159,6 +159,7 @@
                         FlexLayout.AlignSelf="Stretch"
                         HorizontalOptions="FillAndExpand"
 						VerticalOptions="EndAndExpand"
+                        IsVisible="{Binding IsVisibleStartButton}"
 						Text="Başlat"
                         Margin="3,5,3,50"
                         Command="{Binding SaveClicked}" />
