Ekranlardaki butonların renkleri turkuaz yapıldı. Login ekranındaki buton yazısı değiştirildi. Login ve şifremi unuttum ekranındaki logolar değiştirildi.

--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/AnnouncementPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/AnnouncementPage.xaml
@@ -50,9 +50,8 @@
 						    CornerRadius="50"
                             FontSize="Medium"
                             TextColor="White"
-                        Margin="0,0,0,5"
-                            BorderColor="Black"
-                            BackgroundColor="#2196f3"
+                            Margin="0,0,0,5"
+                            BackgroundColor="#00a9ab"
                             FlexLayout.AlignSelf="Stretch"
                             HorizontalOptions="CenterAndExpand"
                             WidthRequest="350"
