--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/ForgetPasswordPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/ForgetPasswordPage.xaml
@@ -30,21 +30,10 @@
 						Padding="0,20,0,0"
 						InputTransparent="true">
                         <!-- LOGO -->
-                        <Grid
-							Grid.Row="1"
-							WidthRequest="135"
-							HeightRequest="135"
-							VerticalOptions="Center"
-							HorizontalOptions="Center">
-                            <BoxView
-								Opacity="1"
-								HorizontalOptions="Center"
-								WidthRequest="60" />
-                            <Image
-                                Source="logo.png"
+                        <Image
+                                Source="scenarioDetailLogo.png"
 								HorizontalOptions="Center"
 								VerticalOptions="Center" />
-                        </Grid>
                         <!-- WELCOME TEXT -->
                         <Label
 							Text="Şifre Sıfırlama"
@@ -120,8 +109,7 @@
 						    CornerRadius="50"
                             FontSize="Medium"
                             TextColor="White"
-                            BorderColor="Black"
-                            BackgroundColor="#2196f3"
+                            BackgroundColor="#00a9ab"
                             FlexLayout.AlignSelf="Stretch"
                             HorizontalOptions="CenterAndExpand"
                             WidthRequest="350"
