Android TabMenu visibility yetkie bağlandı.

--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/MainPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/MainPage.xaml
@@ -13,13 +13,13 @@
             </x:Arguments>
         </NavigationPage>
 
-        <NavigationPage Title="Görevler" x:Name="TaskList" Icon="taskIcon.png" IsVisible="{Binding IsVisibleTaskList}">
+        <NavigationPage Title="Görevler" x:Name="TaskList" Icon="taskIcon.png">
             <x:Arguments>
                 <views:TaskListPage />
             </x:Arguments>
         </NavigationPage>
 
-        <NavigationPage Title="ADK" x:Name="ScenarioList" Icon="scenarioIcon.png" IsVisible="{Binding IsVisibleAdkList}">
+        <NavigationPage Title="ADK" x:Name="ScenarioList" Icon="scenarioIcon.png">
             <x:Arguments>
                 <views:ScenarioListPage />
             </x:Arguments>
