--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/ScenarioApprovePage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/ScenarioApprovePage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:Intouch.Edm.Controls"
              NavigationPage.BackButtonTitle="Geri"
+             IsEnabled="{Binding IsBusy, Converter= {StaticResource reverseBoolean}}"
              x:Class="Intouch.Edm.Views.ScenarioApprovePage">
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -134,6 +135,12 @@
                 </Grid>
             </StackLayout>
             <Image x:Name="image" Margin="20,0,20,0" Source="{Binding scenario.PictureUrl}" WidthRequest="200" HeightRequest="200" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"></Image>
+            <ActivityIndicator
+                            x:Name="Progress"
+                            Color="{StaticResource NavigationPrimary}"
+                            IsEnabled="{Binding IsBusy}"
+                            IsVisible="{Binding IsBusy}"
+                            IsRunning="{Binding IsBusy}"></ActivityIndicator>
             <Grid ColumnSpacing="3" HorizontalOptions="FillAndExpand" VerticalOptions="EndAndExpand" Margin="10,5,10,40" BackgroundColor="Azure">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
