--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/AnnouncementPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/AnnouncementPage.xaml
@@ -5,6 +5,9 @@
              IsEnabled="{Binding IsBusy, Converter= {StaticResource reverseBoolean}}"
              NavigationPage.HasNavigationBar="True"
              NavigationPage.HasBackButton="True">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Çıkış" Clicked="Logout_Clicked" />
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <Grid>
             <ScrollView
