--- a/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/UpdateUserInfoPage.xaml
+++ b/Intouch.Edm/Intouch.Edm/Intouch.Edm/Views/UpdateUserInfoPage.xaml
@@ -3,8 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:Intouch.Edm.Controls"
              BackgroundColor="White"
+             NavigationPage.HasBackButton="False"
              IsEnabled="{Binding IsBusy, Converter= {StaticResource reverseBoolean}}"
              x:Class="Intouch.Edm.Views.UpdateUserInfoPage">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Çıkış" Clicked="Logout_Clicked" />
+    </ContentPage.ToolbarItems>
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style x:Key="LableStyle" TargetType="Label">
